fixes featured image overflow on mobile

--- a/src/app/(frontend)/(pages)/case-studies/[slug]/index.module.scss
+++ b/src/app/(frontend)/(pages)/case-studies/[slug]/index.module.scss
@@ -3,6 +3,10 @@
 .featuredImage {
   width: 150%;
   height: auto;
+  
+  @include small-break {
+    width: 100%;
+  }
 }
 
 .content {
